# paddleocr-fastapi

./: Dockerfile  README.md  main.py  pyproject.toml  start.sh
